--- a/bank_frontend/package.json
+++ b/bank_frontend/package.json
@@ -11,7 +11,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "codemirror": "^5.65.16",
     "react": "^18.2.0",
+    "react-codemirror2": "^8.0.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
@@ -19,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-select-async-paginate": "^0.7.4",
+    "react-syntax-highlighter": "^15.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
